# cpp_guide

./: .gitignore  CMakeLists.txt  README.md  q_list.md
.github/workflows/: cmake.yml
src/: CMakeLists.txt  test.cpp
src/patterns/: CMakeLists.txt  abstract_factory.cpp  adapter.cpp  bridge.cpp  builder.cpp  composite.cpp  decorator.cpp  factory_method.cpp  prototype.cpp  singleton.cpp
src/smart_pointers/: CMakeLists.txt  shared_ptr.cpp  unique_ptr.cpp  weak_ptr.cpp
theory/: smart_pointers.md
theory/patterns/: abstract_factory.md  adapter.md  bridge.md  builder.md  composite.md  contents.md  decorator.md  factory_method.md  prototype.md  singleton.md
